--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link rel="stylesheet" type="text/css" href="reset.css" />
     <link href="styles.css" rel="stylesheet" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -21,14 +22,19 @@
 
     <title>Frontend Mentor | QR code component</title>
   </head>
-  <section>
-    <div class="qr-component">
-      <img src="./images/image-qr-code.png" alt="image-qr-code" />
-      <h1>Improve your front-end skills by building projects</h1>
-      <p>
-        Scan the QR code to visit Frontend Mentor and take your coding skills to
-        the next level
-      </p>
-    </div>
-  </section>
+  <body>
+    <main>
+      <div class="qr-component">
+        <img
+          src="./images/image-qr-code.png"
+          alt="qr code to frontendmentor.io"
+        />
+        <h1>Improve your front-end skills by building projects</h1>
+        <p>
+          Scan the QR code to visit Frontend Mentor and take your coding skills
+          to the next level
+        </p>
+      </div>
+    </main>
+  </body>
 </html>
